# FMODTestApp

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/fmodtestapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.h  common_platform.cpp  common_platform.h  load_banks.cpp  native-lib.cpp
app/src/main/java/com/example/fmodtestapp/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/fmodtestapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
